# wallet-core

./: Cargo.toml  README.md
chain/: Cargo.toml
chain/src/: lib.rs
common/: Cargo.toml
common/src/: coin_info.rs  curve_type.rs  lib.rs  macros.rs
crypto/: Cargo.toml
crypto/src/: aes.rs  cache_derived_key.rs  crypto.rs  kdf.rs  lib.rs  scrypt.rs
curve/: Cargo.toml
curve/src/: bip32.rs  constant.rs  derive.rs  ecc.rs  lib.rs  rand.rs  secp256k1.rs  sr25519.rs  subkey.rs
hash/: Cargo.toml
hash/src/: lib.rs
keystore/: Cargo.toml
keystore/src/: guard.rs  hd.rs  lib.rs  private.rs
proto/: Cargo.toml  build.rs
