[package]
name = "common"
version = "0.1.0"
authors = ["Bottom-Labs <bottomlabs@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
parking_lot = "0.10"
lazy_static = "1.4.0"
failure = "0.1.5"