[package]
name = "crypto"
version = "0.1.0"
authors = ["Bottom-Labs <bottomlabs@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash = {path = "../hash"}
common = {path = "../common"}
aes-ctr = "0.3.0"
aes-soft = "0.3.3"
block-modes = "0.3.3"
failure = "0.1.8"
hex = "0.4.2"
bitcoin_hashes = "0.9.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
pbkdf2 = "0.3.0"
hmac = "0.7"
sha2 = "0.8.0"
scrypt = { version = "0.2", default-features = false }

[features]
default = []