[package]
name = "curve"
version = "0.1.0"
authors = ["Bottom-Labs <bottomlabs@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
lazy_static = "1.4.0"
secp256k1 = {version = "0.15", features = ["recovery"]}
tiny-bip39 = "0.6.0"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
bitcoin = "0.21.0"
hex = "0.3.2"
sp-core = "2.0.0-rc3"
schnorrkel = "0.9.1"
regex = {version = "1.3.1"}
byteorder = "1.2"