[package]
name = "keystore"
version = "0.1.0"
authors = ["Bottom-Labs <bottomlabs@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve = {path = "../curve"}
common = {path = "../common"}
crypto = {path = "../crypto"}
hash = {path = "../hash"}
failure = "0.1.5"
tiny-bip39 = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
hex = "0.4.0"
uuid = { version = "0.7", features = ["serde", "v4"] }