[package]
name = "proto"
version = "0.1.0"
authors = ["Bottom-Labs <bottomlabs@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
prost-types = "0.6.1"

[build-dependencies]
prost-build = "0.5.0"
